trying to fix view on mobile

--- a/docs/Styles/overall.css
+++ b/docs/Styles/overall.css
@@ -31,6 +31,8 @@ nav {
   flex-direction: column; /* Stack vertically */
   align-items: left;
   width: 300px; /* Adjust the width */
+  position: sticky;
+  top: 20px;
 }
 
 nav header {
